// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders 1`] = `
<div>
  <label
    class="label"
    for="the-label"
  >
    <span
      class="
        medium
        boldFont
        color
      "
    >
      The label
    </span>
  </label>
  <div
    class="default"
    data-testid="inputWrapper"
  >
    <input
      class="input"
      id="the-label"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Input renders with a feedback state and icon 1`] = `
<div>
  <label
    class="label"
    for="the-label"
  >
    <span
      class="
        medium
        boldFont
        color
      "
    >
      The label
    </span>
  </label>
  <div
    class="error"
    data-testid="inputWrapper"
  >
    <input
      class="input"
      id="the-label"
      type="text"
      value=""
    />
    <div
      style="transition:opacity 100ms ease-in-out;opacity:1;"
    >
      <span
        class="icon"
      >
        <i
          aria-hidden="true"
          class="icon icon-core-exclamation-point-circle"
        />
      </span>
    </div>
  </div>
</div>
`;
